--- a/app/views/purchase_details/index.html.erb
+++ b/app/views/purchase_details/index.html.erb
@@ -31,7 +31,9 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with model: @form_object,url: item_purchase_details_path ,id: 'charge-form',class: 'transaction-form-wrap', local: true do |f| %>
+    <%= form_with url: item_purchase_details_path ,id: 'charge-form',class: 'transaction-form-wrap', local: true do |f| %>
+      <%= render 'shared/error_messages', model: @form_object %>
+     
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
